--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ header img
     display: flex;
     flex-direction: column;
     padding-bottom: 50px;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(248, 248, 248);
 }
 .explore h1
 {
@@ -100,7 +100,7 @@ h2
     display: flex;
     padding: 10px 0 10px 0;
     margin-top: 30px;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(248, 248, 248);
     border-radius: 20px;
     box-shadow: 1px 1px 10px #dadada;
 }
@@ -146,5 +146,55 @@ h2
 {
     font-family: "Roboto", sans-serif;
     padding: 10px 15px 30px 30px;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(248, 248, 248);
+}
+.restaurants_box
+{
+    display: flex;
+    flex-direction: column;
+    margin-left: -10px;
+}
+.restaurants_cards
+{
+    display: flex;
+    flex-direction: column;
+    width: 335px;
+    height: 300px;
+}
+.restaurants_cards img
+{
+    width: 335px;
+    height: 190px;
+    margin: -16px 0 0 -40px;
+    border-bottom: 80px solid white;
+    border-radius: 18px;
+    box-shadow: 5px 5px 21px #c4c0c0;
+}
+.restaurants_cards h2
+{
+    width: 60px;
+    height: 1px;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin: -275px 0 0 242px;
+    padding: 7px 7px 22px 12px;
+    color: #30a15f;
+    background-color: #99E2D0;
+    border-radius: 3px;
+}
+.restaurants_cards h4
+{
+    font-size: 1.2em;
+    padding: 135px 0 0 10px;
+}
+.restaurants_cards p
+{
+    font-size: 1.1em;
+    font-weight: lighter;
+    margin: -20px 0 0 10px;
+}
+.heart
+{
+    font-size: 25px;
+    margin: -50px 0 0 280px;
 }
