minor fix padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -631,6 +631,7 @@ footer
     {
         margin: -350px 0 0 500px;
         font-size: 2em;
+        padding-right: 170px;
     }
     .heart_menu
     {
