--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,6 +518,13 @@ footer
 
 /* MEDIA QUERIES -------------------------------------------------------------*/
 
+@media only screen and (min-width: 280px)
+{
+    html, body, header
+    {
+        width: auto;
+    }
+}
 @media only screen and (min-width: 300px)
 {
     /* LOADING SPINNER ------------------------------------------------------*/
@@ -525,16 +532,20 @@ footer
     @keyframes load-background{
         0%,100% {
             transform: scale(1);
-            width: 133vw;
+            width: 100vw;
             height: 150vh;
         }
     }
     
     /* INDEX ----------------------------------------------------------------*/
 
-    html, body, header
+    html, body, header, footer
     {
-        width: 420px;
+        width: auto;
+    }
+    header img
+    {
+        padding-left: 15px;;
     }
     .city p
     {
@@ -547,203 +558,331 @@ footer
     .restaurants_cards
     {
         margin-left: 5px;
+        width: auto;
+    }
+    .restaurants_cards img
+    {
+        width: 270px;
+    }
+    .restaurants_cards h2
+    {
+        margin: -270px 0 0 170px;
+    }
+    .heart
+    {
+        margin: -40px 0 0 220px;
     }
 
     /* MENU PAGES ----------------------------------------------------------------*/
 
     .menu_pages, .menu_header
     {
-        width: 420px;
+        width: auto;   
     }
-    .menu
+    .logo img
     {
-        width: 409px;
+        width: 140px;
+        margin-left: -30px;
     }
     .restaurant_image img
     {
-        width: 420px;
-    }
-    aside
-    {
-        width: 417px;
-        margin: auto;
-    }
-}
-
-@media only screen and (min-width: 420px)
-{
-    /* LOADING SPINNER ------------------------------------------------------*/
-
-    @keyframes load-background{
-        0%,100% {
-            transform: scale(1);
-            width: 130vw;
-            height: 150vh;
-        }
-    }
-
-    /* INDEX ----------------------------------------------------------------*/
-
-    html, body, header
-    {
-        width: 540px;
-    }
-    .categories_title
-    {
-        text-align: center;
-    }
-    .restaurants_box
-    {
-        justify-content: center;
-        align-items: center;
-    }
-
-    /* MENU PAGES ----------------------------------------------------------------*/
-
-    .menu_pages, .menu_header
-    {
-        width: 540px;
-    }
-    .restaurant_image img
-    {
-        width: 540px;
+        width: 100vw;
     }
     .menu
     {
-        width: 530px;
-        height: 1180px;
-    }
-    .starters_cards, .dishes_cards, .desserts_cards
-    {
-        width: 500px;
-    }
-    aside
-    {
-        width: 540px;
-    }
-}
-@media only screen and (min-width: 540px)
-{
-    /* LOADING SPINNER ------------------------------------------------------*/
-
-    @keyframes load-background{
-        0%,100% {
-            transform: scale(1);
-            width: 120vw;
-            height: 150vh;
-        }
-    }
-
-    /* INDEX ----------------------------------------------------------------*/
-
-    html, body, header
-    {
-        width: 625px;
-    }
-    header img
-    {
-        padding-right: 50px;
-    }
-    .categories_title
-    {
-        text-align: center;
-    }
-    .restaurants_box
-    {
-        justify-content: center;
-        align-items: center;
-    }
-    
-    /* MENU PAGES ----------------------------------------------------------------*/
-
-    .menu_pages, .menu_header
-    {
-        width: 540px;
-    }
-    .restaurant_image img
-    {
-        width: 539px;
-        height: 331px;
-    }
-    .arrow_return
-    {
-        margin-left: -100px;
-    }
-    .logo
-    {
-        margin-left: 60px;
-    }
-    .menu
-    {
-        width: 529px;
+        width: auto;
     }
     .menu h2
     {
-        padding-left: 30px;
-        padding-right: 20px;
+        font-size: 1.4em;
+        margin-left: 20px;
     }
     .heart_menu
     {
-       padding-left: 90px; 
+        font-size: 23px;
+        margin: -45px 0 0 250px;
+    }
+    .menu_cards
+    {
+        width: auto;
+        margin: 0 10px 0 10px;
+    }
+    .menu_cards h3, .border
+    {
+        margin-left: -20px;  
     }
     .starters_cards, .dishes_cards, .desserts_cards
     {
-        width: 505px;
+        width: auto;
+        font-size: 0.8em;
+        margin-left: -30px;
     }
     aside
     {
-        width: 540px;
+        width: auto;
+        padding: 20px 0 40px 0;
     }
     .order_button
     {
         margin: auto;
     }
-    footer
-    {
-        width: 520px;
-    }
-
 }
-@media only screen and (min-width: 900px)
+
+@media only screen and (min-width: 360px)
 {
     /* INDEX ----------------------------------------------------------------*/
 
-    html, body, header, footer
+    .restaurants_cards
+    {
+        margin-left: 5px;
+        width: auto;
+    }
+    .restaurants_cards img
+    {
+        width: 310px;
+    }
+    .restaurants_cards h2
+    {
+        margin: -270px 0 0 210px;
+    }
+    .heart
+    {
+        margin: -40px 0 0 260px;
+    }
+
+    /* MENU PAGES ----------------------------------------------------------------*/
+
+    .heart_menu
+    {
+        font-size: 23px;
+        margin: -45px 0 0 280px;
+    }
+    .starters_cards, .dishes_cards, .desserts_cards
+    {
+        font-size: 1em;
+    }
+
+}
+
+@media only screen and (min-width: 375px)
+{
+    /* INDEX ----------------------------------------------------------------*/
+
+    .restaurants_cards
+    {
+        margin-left: 5px;
+        width: auto;
+    }
+    .restaurants_cards img
+    {
+        width: 320px;
+    }
+    .restaurants_cards h2
+    {
+        margin: -270px 0 0 220px;
+    }
+    .heart
+    {
+        margin: -40px 0 0 270px;
+    }
+
+    /* MENU PAGES ----------------------------------------------------------------*/
+
+    .heart_menu
+    {
+        font-size: 23px;
+        margin: -45px 0 0 290px;
+    }
+
+}
+@media only screen and (min-width: 410px)
+{
+ 
+    /* INDEX ----------------------------------------------------------------*/
+
+    html, body
+    {
+        font-size: 1.1em;
+    }
+    html, body, header
     {
         width: auto;
     }
-    .explore h1, .explore p, .explore_button
+    header img
     {
-        margin: auto;
+        padding-right: 15px;
     }
-    .explore p
+    .city i
     {
-        padding-bottom: 30px;
+        margin-top: 4px;
     }
-    .how_is_work h2
+    .explore_button
     {
-        text-align: center;
+        font-size: 0.9em;
+    }
+    .restaurants_cards img
+    {
+        width: 360px;
+    }
+    .restaurants_cards h2
+    {
+        margin: -270px 0 0 250px;
+        padding-right: 20px;
+        padding-bottom: 24px;
+    }
+    .restaurants_cards h4
+    {
+        margin-top: 10px;
+    }
+    .heart
+    {
+        margin: -50px 0 0 300px;
+    }
+
+    /* MENU PAGES ----------------------------------------------------------------*/
+
+    .arrow_return
+    {
+        margin-top: 5px;
+    }
+    .restaurant_image
+    {
+        margin-top: -5px;
+    }
+    .heart_menu
+    {
+        font-size: 25px;
+        margin: -55px 0 0 320px;
+    }
+    .order_button
+    {
+        padding-bottom: 15px;
+    }
+    .starters_cards, .dishes_cards, .desserts_cards
+    {
+        height: auto;
+    }
+    .fa-check-circle
+    {
+        font-size: 35px;
+    }
+    
+
+}
+@media only screen and (min-width: 540px)
+{
+
+    /* INDEX ----------------------------------------------------------------*/
+
+    header img
+    {
+        width: 230px;
+        height: auto;
+    }
+    .how_is_work h2, .categories_title
+    {
         font-size: 1.7em;
-    }
-    .number_one, .number_two, .number_three
-    {
-        justify-content: center;
-        margin: 30px 190px 0 190px;
-    }
-    .restaurants
-    {
-        background-color: white;
     }
     .categories_title
     {
-        font-size: 1.9em;
         text-align: center;
-        padding-right: 15px;
     }
+    .restaurants
+    {
+        margin: auto;
+    }
+    .restaurants_box
+    {
+        margin: auto;
+    }
+    .restaurants_cards
+    {
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    .restaurants_cards img
+    {
+        width: 470px;
+        height: auto;
+    }
+    .restaurants_cards h2
+    {
+        margin: -320px 0 0 350px;
+        padding-right: 20px;
+        padding-bottom: 24px;
+    }
+    .restaurants_cards h4
+    {
+        margin-top: 55px;
+    }
+    .heart
+    {
+        margin: -50px 0 0 410px;
+    }
+    
+    /* MENU PAGES ----------------------------------------------------------------*/
+
+    .arrow_return
+    {
+        font-size: 25px;
+    }
+    .logo img
+    {
+        width: 210px;
+        height: auto;
+    }
+    .heart_menu
+    {
+        margin: -55px 0 0 400px;
+    }
+}
+@media only screen and (min-width: 600px)
+{
+    /* INDEX ----------------------------------------------------------------*/
+
     .restaurants_box
     {
         justify-content: center;
         align-items: center;
+    }
+
+    /* MENU PAGES ----------------------------------------------------------------*/
+
+    .heart_menu
+    {
+        margin: -55px 0 0 550px;
+    }
+}
+@media only screen and (min-width: 750px)
+{
+    /* MENU PAGES ----------------------------------------------------------------*/
+    
+    .heart_menu
+    {
+        margin: -55px 0 0 600px;
+    }
+}
+@media only screen and (min-width: 850px)
+{
+    /* INDEX ----------------------------------------------------------------*/
+
+    .how_is_work h2
+    {
+        font-size: 2em;
+        text-align: center;
+    }
+    .number_one, .number_two, .number_three
+    {
+        justify-content: center;
+        align-items: center;
+    }
+    .number_one h3, .number_two h3, .number_three h3
+    {
+        padding: 4px 2px 6px 2px;
+    }
+    .number_two i
+    {
+        padding-left: 30px;
     }
     .restaurants_cards
     {
@@ -753,27 +892,28 @@ footer
         transition: 1s ease-out;
     }
     .restaurants_cards:hover
-{
+    {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
     transition: 1s ease-in;
-}
+    }
     .restaurants_cards img
     {
         width: 670px;
-        height: 400px;
+        height: auto;
+        border-bottom: 100px solid white;
     }
     .restaurants_cards h2
     {
-        margin: -460px 50px 0 460px;
-        padding-right: 22px;
-        padding-bottom: 25px;
+        margin: -450px 50px 0 510px;
+        padding-right: 34px;
+        padding-bottom: 30px;
         font-size: 1.1em;
     }
     .restaurants_cards h4
     {
-        margin: 205px 0 10px -500px;
+        margin: 170px 0 10px -490px;
         font-size: 1.3em;
     }
     .restaurants_cards p
@@ -793,11 +933,11 @@ footer
     }
     .footer li:nth-child(1)
     {
-        margin-left: -60px;
+        margin-left: -70px;
     }
     .footer li:nth-child(2)
     {
-        margin-left: -45px;
+        margin-left: -50px;
     }
     .footer li:nth-child(3)
     {
@@ -805,42 +945,38 @@ footer
     }
     .footer li:nth-child(4)
     {
-        padding-left: 25px;
+        padding-left: 30px;
     }
 
     /* MENU PAGES ----------------------------------------------------------------*/
 
-    .container
-    {
-        background-color: rgb(248, 248, 248);
-    }
     .restaurant_image img
     {
-        width: 513px;
-        height: 385px;
-        border-bottom-right-radius: 30px;
+        height: auto;
     }
     .menu
     {
-        margin-top: 40px;
+        margin-top: -600px;
     }
     .menu h2
     {
-        margin: -350px 0 0 500px;
         font-size: 2em;
-        padding-right: 170px;
     }
     .heart_menu
     {
-        margin: -35px 0 0 1070px;
+        margin: -72px 0 0 750px;
     }
     .menu_cards
     {
-        padding-top: 270px;
+        padding-top: 50px;
     }
-    .restaurants_cards i:hover, .menu i:hover
+    .starters h3, .dishes h3, .desserts h3
     {
-    color: #9356DC;
+        font-size: 1.6em;
+    }
+    .border
+    {
+        padding-right: 25px;
     }
     .starters_cards:active .check_icon, .dishes_cards:active .check_icon, .desserts_cards:active .check_icon
     {
@@ -850,5 +986,13 @@ footer
     {
         transform: rotate(0deg)
     }
+}
+@media only screen and (min-width: 1200px)
+{
+    /* MENU PAGES ----------------------------------------------------------------*/
 
+    .heart_menu
+    {
+        margin: -72px 0 0 920px;
+    }
 }
